--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,9 +1,9 @@
 {
   "name": "my-homelab",
-  "main": "./index.html"
+  "main": "./index.html",
   "compatibility_date": "2026-01-27",
   "assets": {
-    "directory": "./" 
+    "directory": "./" ,
     "binding": "ASSETS"
   }
 }
